--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,13 +5,12 @@
 
 trigger:
 - master
-buildConfiguration: 'Release'
 
 pool:
   vmImage: ubuntu-latest
 
 variables:
-  buildConfiguration: 'Release'
+  buildConfiguration: 'deploy'
 
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
