Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,13 +12,17 @@ pool:
 variables:
   buildConfiguration: 'release'
 
-steps:
-- script: dotnet build --configuration $(buildConfiguration)
-  displayName: 'dotnet build $(buildConfiguration)'
+stages:
+ - stage: TEST
+   jobs:
+    - job: Installtool
+      steps:
+        - task: UseDotNet@2
+          inputs:
+           packageType: 'sdk'
+           version: '6.0'
+        
 
-- task: DotNetCoreCLI@2
-  inputs:
-    command: 'build'
-    projects: '**/*.csproj'
+
 
 
