--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,7 @@ stages:
  - stage: TEST
    jobs:
     - job: Installtool
+      displayName: installing required tool
       steps:
         - task: UseDotNet@2
           inputs:
