--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ stages:
         - task: UseDotNet@2
           inputs:
            packageType: 'sdk'
-           version: '6.0.1'
+           version: '6.0.x'
         
 
 
