--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,7 @@ stages:
           inputs:
             command: 'restore'
             projects: '**/*.csproj'
-            feedsToUse: 'select'
+            feedsToUse: 'nugetOrg'
         
 
 
