Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,6 +47,16 @@ stages:
            inputs:
              command: 'test'
              projects: '**/*.csproj'
+
+    - job: Publish
+      displayName: Publish artifact
+      dependsOn: Test
+      steps:
+        - task: DotNetCoreCLI@2
+          inputs:
+            command: 'publish'
+            publishWebProjects: false
+            projects: '**/*.csproj'
         
 
 
