--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,7 +47,7 @@ stages:
            inputs:
              command: 'test'
              projects: '**/*.csproj'
-
+             arguments: --collect "code coverage"
     - job: Publish
       displayName: Publish artifact
       dependsOn: Test
