--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,7 +55,8 @@ stages:
            - task: PublishCodeCoverageResults@2
              inputs:
                codeCoverageTool: 'cobertura'   
-               summaryFileLocation: '$(System.DefaultWorkingDirectory)\\codecoverage.cobertura.xml'   
+               summaryFileLocation: '$(System.DefaultWorkingDirectory)**//codecoverage.cobertura.xml' 
+               reportDirectory: '$(System.DeafaultWorkingDirectory)**//codecoverageReport'  
     - job: Publish
       displayName: Publish artifact
       dependsOn: Test
