Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,6 +51,7 @@ stages:
              
 
     - job: publishcodecoverage
+      dependsOn: Test
       steps:
            - task: PublishCodeCoverageResults@2
              inputs:
