--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -67,6 +67,12 @@ stages:
             command: 'publish'
             publishWebProjects: false
             projects: '**/*.csproj'
+
+
+        - task: PublishPipelineArtifact@1
+          inputs:
+            targetPath: '$(Build.ArtifactStagingDirectory)' 
+            artifactName: 'myWebsite'    
         
 
 
