--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,10 +53,15 @@ stages:
     - job: publishcodecoverage
       dependsOn: Test
       steps:
-           - task: PublishCodeCoverageResults@2
-             inputs:
+         - script: | 
+             dotnet tool install --global dotnet-reportgenerator-globaltool 
+             reportgenerator -reports:$(System.DefaultWorkingDirectory)/**/coverage.cobertura.xml -targetdir:$(System.DefaultWorkingDirectory)/CodeCoverageReport -reporttypes:Html 
+           displayName: Generate HTML coverage report
+         - task: PublishCodeCoverageResults@2
+           inputs:
                codeCoverageTool: 'cobertura'   
                summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/coverage.cobertura.xml' 
+               reportDirectory: '$(System.DefaultWorkingDirectory)/CodeCoverageReport'
                  
     - job: Publish
       displayName: Publish artifact
