--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -2,9 +2,9 @@
 # Build and test ASP.NET Core projects targeting .NET Core.
 # Add steps that run tests, create a NuGet package, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
-
 trigger:
 - master
+
 strategy:
   matrix:
     linux:
@@ -16,45 +16,19 @@ strategy:
   maxParallel: 3
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: $(imageName)
 
-variables:
-  buildConfiguration: 'release'
 
-stages:
- - stage: TEST
-   jobs:
-    - job: Installtool
-      displayName: installing required tool
-      steps:
-        - task: UseDotNet@2
-          inputs:
+
+  stages:
+   - stage: TEST
+     jobs:
+      - job: Installtool
+        displayName: Install .NET SDK
+        steps:
+         - task: UseDotNet@2
+           inputs:
            packageType: 'sdk'
            version: '6.0.x'
-    - job: Restore
-      displayName: restoring the nuget package from external source
-      steps:
-        - task: DotNetCoreCLI@2
-          inputs:
-            command: 'restore'
-            projects: '**/*.csproj'
-            
-    - job: Build
-      displayName: Building code
-      dependsOn: Restore    
-      steps:
-        - task: DotNetCoreCLI@2
-          inputs:
-            command: 'build'
-            projects: '**/*.csproj'
 
-    - job: Test
-      displayName: Test my code
-      dependsOn: Build
-      steps:
-         - task: DotNetCoreCLI@2
-           inputs:
-             command: 'test'
-             projects: '**/*.csproj'
-             arguments: '--collect:"XPlat Code Coverage" -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=cobertura'
-             
+  
